5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1764_1189.log
== TEST (2019-05-24 16:17:42) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == S[])
	i = i + 1
	print("pao")
-- ERROR:
File "XXXX", line 4
    if(S[i] == S[])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:18:05) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == " ")
	i = i + 1
	print("pao")
-- ERROR:
File "XXXX", line 4
    if(S[i] == " ")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:18:26) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == "")
	i = i + 1
	print("pao")
-- ERROR:
File "XXXX", line 4
    if(S[i] == "")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:19:02) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == S[]):
		i = i + 1
		print("pao")
-- ERROR:
File "XXXX", line 4
    if(S[i] == S[]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:19:33) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == " "):
		i = i + 1
		print("pao")
-- ERROR:
File "XXXX", line 4
    if(S[i] == S[]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:20:41) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == " "):
		i = i + 1
print(i)
-- ERROR:
File "XXXX", line 4
    if(S[i] == S[]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:21:03) 
-- CODE:
S = input("digite uma string:")
i = 0 
while(i < len(S)):
	if(S[i] == " "):
		i = i + 1
	print(i)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:25:05) 
-- CODE:
S = input("digite uma string:")
i = 0 
print(len(S))
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:26:08) 
-- CODE:
S = input("digite uma string:")
i = 0 
print(len(S))
print(S[3])
-- OUTPUT:
21
R
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:31:55) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	print("pao")
-- OUTPUT:
21
R
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:36:08) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	S[3] == ""
print(S)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:37:30) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== ""):
	S[3] == S[3]*0
print(S)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:38:25) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== ""):
	S[3] == S[3]*0
print(S[3])
-- OUTPUT:
R
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:39:05) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== ""):
	S[3] == S[3]*0
print(S[3]*0)
-- OUTPUT:
R
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:41:48) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[i]== " "):
	S[i] == S.replace(S[i],A)
print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:42:39) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	S[3] == S.replace(S[i],A)
print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:43:07) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	S[3] == S.replace(S[i],"A")
print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:44:01) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	S[3] == S.replace(S[3],"A")
print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:44:26) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== " "):
	S[3] == S.replace(S[3],"A")
	print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:44:45) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== ""):
	S[3] == S.replace(S[3],"A")
	print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:45:02) 
-- CODE:
S = input("digite uma string:")
i = 0 

#while(i < len(S)):
if(S[3]== ""):
	S[3] == S.replace(S[3],"A")
	print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:47:25) 
-- CODE:
S = input("digite uma string:")
i = 0 

S[0] == S.replace(S[0],"A")
S[1] == S.replace(S[1],"B")
S[2] == S.replace(S[2],"C")

print(S)
		
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:57:42) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != ""):
		n = n + 1
	i = i + 1

print(n)
		
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:58:23) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != ""):
		n = n + 1
	i = i + 1

print(n)
		
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:59:36) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1

print(n)
		
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:01:04) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
n = "A"
print(n)
		
-- OUTPUT:
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:01:34) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
n = "A"
print(n)
		
-- OUTPUT:
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:02:30) 
-- CODE:
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n)
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    S2 = ones(n)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:03:43) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n)
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:06:29) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:06:41) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:07:28) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:10:41) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:14:41) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

print(S2[1])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:17:43) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2[i2] = S[i]
		i2 = i2 + 1
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:18:56) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2[i2] = S[i] + S2[i2]
		i2 = i2 + 1
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:21:36) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S + S2
		i2 = i2 + 1
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:22:38) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S + S2
		i2 = i2 + 1
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:23:49) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
#while(i < len(S)):
if(S[i] != " "):
	S2 = S + S2
		#i2 = i2 + 1
#	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:29:02) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] = " "):
		S[i] = S.replace(" ","k")

	i = i+ 1

print(S2)
		
-- ERROR:
File "XXXX", line 15
    if(S[i] = " "):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:30:02) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] = " "):
		S[i] = S.replace(" ","k")

	i = i+ 1

print(S2)
		
-- ERROR:
File "XXXX", line 15
    if(S[i] = " "):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:31:04) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S[i] = S.replace(" ","k")

	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:31:36) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(" ","k")

	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:31:55) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(" ","k")

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:32:53) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(" ",S[i])

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:33:25) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(" ",S2[i])

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:34:18) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S2[i],S[i])

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:34:54) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],S2[i])

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:35:54) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S = S.replace(S2[i],S[i])

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:37:34) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S = S.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:38:35) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:39:14) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S[i],S2[i2])
		i2 = i2 + 1

	i = i+ 1

print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:39:53) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:41:03) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:41:53) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
print(len(S2))
i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1
print(len(S2))
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:44:15) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(n)
S2 = str(S2)
print(len(S2))
i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1
print(len(S2))
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:45:57) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(n)
S2 = str(S2)
print(S2)
i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1
print(len(S2))
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:47:55) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(n)
S2 = int(S2)
S2 = str(S2)
print(S2)
i = 0
i2 = 0
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1

	i = i+ 1
print(len(S2))
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 11:48:22) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
print(n)
S2 = int(S2)
S2 = str(S2)
print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:42:32) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:46:11) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(s[i] != " "):
		s2 = S2.replace(S2[i],S[1])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:46:21) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(s[i] != " "):
		s2 = S2.replace(S2[i],S[1])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:46:46) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		s2 = S2.replace(S2[i],S[1])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:48:29) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] == " "):
		s2 = S2.replace(S2[i],S[1])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:49:21) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		s2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:50:34) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:51:08) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 1
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:51:34) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 3
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:51:52) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:54:28) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S[i],S2[i2])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:55:08) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S.replace(S[i],S2[i2])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:55:31) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:55:43) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:55:57) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:56:40) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i = i + 1
	i2 = i2 + 2

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:57:22) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i2 < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i = i + 1
	i2 = i2 + 2

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:58:09) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
i2 = 1
while(i < len(S)):
	if(S[i] != " "):
		S2 = S2.replace(S2[i2],S[i])
		i2 = i2 + 2
	i = i+ 1

print(S2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:00:18) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],S[])
	i = i+ 1
print(S)
		
-- ERROR:
File "XXXX", line 14
    S = S.replace(S[i],S[])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:30:19) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],S[])
	i = i+ 1
print(S)
		
-- ERROR:
File "XXXX", line 14
    S = S.replace(S[i],S[])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:34:55) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
vv = array([])
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],[0])
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:35:05) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
vv = array([])
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],vv[0])
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:36:14) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
vv = array([])
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],vv[])
	i = i+ 1
print(S)
		
-- ERROR:
File "XXXX", line 15
    S = S.replace(S[i],vv[])
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:36:30) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
vv = array([])
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],vv)
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:37:05) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0
vv = array([])
vv = str(vv)
while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],vv)
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:38:35) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0

while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],S[i + 1])
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:38:50) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
i = 0

while(i < len(S)):
	if(S[i] == " "):
		S = S.replace(S[i],S[i + 1])
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:48:19) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i+ 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:48:40) 
-- CODE:
from numpy import*
S = input("digite uma string:")
i = 0 
n = 0
while(i < len(S)):
	if(S[i] != " "):
		n = n + 1
	i = i + 1
S2 = ones(n, dtype=int )
S2 = str(S2)
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:50:17) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:50:17) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:51:39) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	j = j + S[i]
	i = i - 1
print(S)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:52:06) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:54:29) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 16:54:49) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- EXECUTION TIME:
0.355748
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
amalanadanalama
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:55:26) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:55:27) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:56:27) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j.upper())
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:57:18) 
-- CODE:
from numpy import*
S = input("digite uma string:")
j = ""
i = -1 

while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:01:39) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
ii = 0
while(ii < len(S)):
	if(S[ii != " "]):
		k = k + S[ii]
	ii = ii + 1
print(ii)


j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j.upper())
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:02:20) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
ii = 0
while(ii < len(S)):
	if(S[ii != " "]):
		k = k + S[ii]
	ii = ii + 1
print(k)


j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j.upper())
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:03:54) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k)


j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j.upper())
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:04:32) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k)


j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j.upper())
n = 0
if(j == S):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:06:00) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
print(j)
n = 0
if(j == k):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:06:42) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 17:07:03) 
-- CODE:
from numpy import*
S = input("digite uma string:")

k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
	
		
-- EXECUTION TIME:
0.30614
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
